[package]
name = "betalpha-mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
bytes = "1.5.0"
pollster = "0.3.0"
fs_extra = "1.3.0"
async-trait = "0.1.77"
hematite-nbt = "0.5.2"
walkdir = "2.4.0"
flate2 = "1"
deflate = "1"
rayon = "1.8.0"
libz-sys = "1.1.12"
betalpha-derive = {path = "betalpha-derive"}
# bevy_ecs = "0.12.1"
bevy = { version = "0.12.1", default-features = false }
log = "0.4.20"
simple_logger = "4.3.3"
anymap = "^0.12"

[workspace]
members = ["betalpha-derive"]